# bandcamp-dl

./: .gitignore  Cargo.toml  README.md  build.sh  common.sh  git-tag-version.sh  install.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  utils.rs
