[package]
name = "bandcamp-dl"
version = "1.6.1"
edition = "2021"
authors = ["Esgrove <esgrove@outlook.com>"]
description = "CLI tool for downloading a list of URLS"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/bandcamp-dl"
keywords = ["cli"]
categories = ["command-line-utilities"]
default-run = "bcdl"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
dunce = "1.0.5"
futures = "0.3.31"
indicatif = { version = "0.17.9", features = ["tokio", "futures"] }
num_cpus = "1.16.0"
regex = "1.11.1"
reqwest = { version = "0.12.10", features = ["stream", "rustls-tls", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
trash = "5.2.1"
zip = "2.2.2"

[[bin]]
name = "bcdl"
path = "src/main.rs"

[[bin]]
name = "bcdl-zip"
path = "src/bin/unzip.rs"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
fn_params_excessive_bools = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
unreadable_literal = "allow"
