[package]
name = "bandcamp-dl"
version = "1.8.5"
edition = "2024"
authors = [ "Esgrove <esgrove@outlook.com>" ]
description = "CLI tool for downloading a list of URLS"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/bandcamp-dl"
keywords = [ "cli" ]
categories = [ "command-line-utilities" ]
default-run = "bcdl"
rust-version = "1.90"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = [ "derive" ] }
colored = "3.0.0"
dunce = "1.0.5"
futures = "0.3.31"
indicatif = { version = "0.18.3", features = [ "tokio", "futures" ] }
num_cpus = "1.17.0"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = [ "http2", "json", "rustls-tls", "rustls-tls-native-roots", "stream" ] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [ "fs", "io-std", "io-util", "macros", "parking_lot", "process", "rt", "rt-multi-thread", "time" ] }
trash = "5.2.5"
zip = "6.0.0"

[[bin]]
name = "bcdl"
path = "src/main.rs"

[[bin]]
name = "bczip"
path = "src/bin/unzip.rs"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
fn_params_excessive_bools = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
unreadable_literal = "allow"
